[package]
name = "skyblock-lore-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.32"
anyhow = "1.0.100"
dotenvy = "0.15.7"
env_logger = "0.11.8"
image = "0.25.10"
imageproc = "0.26.2"
log = "0.4.29"
regex = "1.12.3"
phf = { version = "0.13.1", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
warp = { version = "0.4.3", features = ["server"] }
bytes = "1.11.1"
base64 = "0.22.1"
serde_json = "1.0.150"
serde_derive = "1.0.228"
serde = "1.0.228"
